@@ -3,7 +3,9 @@ procps-3.2.3 --> procps-3.2.4
 support 64-bit MIPS with n32 binary
 sparc32 optimized for sparc32 again
 pwdx: new command -- thanks Nicholas Miell
+ps: UTF-8 username + command -- thanks Karel Zak rh134763,rh112518,rh134780
 ps: more room for some columns
+ps: tolerate SubDomain security module CONTEXT/LABEL data    #277401
 watch: passes COLUMNS and LINES in environment
 top: in batch mode, tolerate unknown $TERM -- thanks Daniel Walsh
 pkill: quiet about processes that die before kill()
